--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ ul li {
   cursor: pointer;
   position: relative;
   padding: 12px 8px 12px 40px;
+  margin-bottom: 5px;
   background: #eee;
   font-size: 18px;
   transition: 0.2s;
@@ -59,9 +60,22 @@ ul li.checked::before {
 /* Style the close button */
 .close {
   position: absolute;
-  right: 0;
+  right: 40px;
   top: 0;
-  padding: 12px 16px 12px 16px;
+  /* padding: 12px 16px 12px 16px; */
+  
+  padding: 5px;
+  width: 23%;
+  background: #0000FF;
+  color: white;
+  float: left;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 900;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 30px;
+  
 }
 
 .close:hover {
@@ -84,7 +98,7 @@ ul li.checked::before {
 
 /* Style the input */
 input {
-  margin-bottom: 10px;
+  margin-right: 10px;
   border-radius: 15px;
   width: 75%;
   padding: 10px;
@@ -110,4 +124,9 @@ input {
 .submitBtn:hover {
   background-color: #0096FF;
   transition: 0.3s;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
 }
